/*      
        go install github.com/gogo/protobuf/protoc-gen-gofast@latest 
        !!!!NOT  go get github.com/gogo/protobuf/protoc-gen-gofast
        protoc --gofast_out=. *.proto 
*/
// Use protos/gen.sh to generate .pb.go files.
syntax = "proto3";

package pb;

message KV {
  		bytes key = 1;
  		bytes value = 2;
  		bytes user_meta = 3;
  		uint64 version = 4;
  		uint64 expires_at = 5;
  		bytes meta = 6;

  		// Stream id is used to identify which stream the KV came from.
  		uint32 stream_id = 10;
}

message KVList {
  		repeated KV kv = 1;
}

message ManifestChangeSet {
        // A set of changes that are applied atomically.
        repeated ManifestChange changes = 1;
}

message ManifestChange {
        uint64 Id = 1;
        enum Operation {
                CREATE = 0;
                DELETE = 1;
        }
        Operation Op   = 2;
        uint32 Level   = 3; // Only used for CREATE
        bytes Checksum = 4; // Only used for CREATE
}
message TableIndex{
        repeated BlockOffset offsets = 1;
        bytes  bloomFilter = 2;
        uint64 maxVersion = 3;
        uint32 keyCount = 4;
        uint32 staleDataSize = 5;
}

message BlockOffset{
        bytes key = 1;
        uint32 offset = 2;
        uint32 len = 3;
}
// 记得加这行
option go_package="./;pb";